--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -49,15 +49,6 @@ header li {
   color: #333;
   padding: 80px; }
 
-footer {
-  width: 100%;
-  background-color: #2c3e50;
-  padding: 20px 0px;
-  color: white;
-  font-size: 12px;
-  width: 100%;
-  position: absolute;
-  bottom: 0; }
 
 html {
   position: relative;
@@ -181,4 +172,9 @@ html {
   &:hover {
   opacity: 0.7;
 }
+}
+
+.flash {
+  color: white;
+  padding-top: 10px;
 }
