--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,11 +46,12 @@
 
 <%= yield %>
 
+<div class="footercontainer">
   <footer>
     <p>運営会社DIVE INTO CODE株式会社</p>
     <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
   </footer>
-
+</div>
 </body>
 
 
