--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,6 +16,9 @@
       <div class="field">
         <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワード（確認）" %>
       </div>
+      <div class="field">
+        <%= f.text_field :name, autocomplete: "off", class: "form-control", placeholder: "名前" %>
+      </div>
 
       <div class="actions">
         <%= f.submit "サインアップ", class: "btn btn-primary btn-block" %>
