--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -7,6 +7,7 @@
     <div class="row">
       <h4><strong><%= blog.title %></strong></h4>
       <p><%= blog.content %></p>
+      <p>#YOU: <%= blog.user.name %></p>
       <p>#ユーザーID : <%= blog.user_id %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
       <%= link_to "削除", blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
