--- a/app/views/notice_mailer0/sendmail_contact.html.erb
+++ b/app/views/notice_mailer0/sendmail_contact.html.erb
@@ -1,5 +1,5 @@
-<h1>NoticeMailer0#sendmail_contact</h1>
+<h1>お問い合わせが完了しました</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/notice_mailer0/sendmail_contact.html.erb
-</p>
+<h4>title: <%= @contact.name %></h4>
+<p>email: <%= @cotnact.email %></p>
+<p>content: <%= @cotnact.contact %></p>
