--- a/app/views/notice_mailer0/sendmail_contact.html.erb
+++ b/app/views/notice_mailer0/sendmail_contact.html.erb
@@ -2,4 +2,4 @@
 
 <h4>title: <%= @contact.name %></h4>
 <p>email: <%= @contact.email %></p>
-<p>content: <%= @contact.contact %></p>
+<p>content: <%= @contact.content %></p>
