--- a/app/views/notice_mailer0/sendmail_contact.text.erb
+++ b/app/views/notice_mailer0/sendmail_contact.text.erb
@@ -1,3 +1,9 @@
-NoticeMailer0#sendmail_contact
+<h1>お問い合わせが完了しました</h1>
+
+<h4>title: <%= @contact.name %></h4>
+<p>email: <%= @contact.email %></p>
+<p>content: <%= @contact.content %></p>
+<!-- NoticeMailer0#sendmail_contact
 
 <%= @greeting %>, find me in app/views/notice_mailer0/sendmail_contact.text.erb
+ -->
