--- a/app/views/notice_mailer/sendmail_blog.text.erb
+++ b/app/views/notice_mailer/sendmail_blog.text.erb
@@ -1,3 +1,12 @@
-NoticeMailer#sendmail_blog
+<h1>Achieveに新しくブログが投稿されました！</h1>
+
+<h4>title: <%= @blog.title %></h4>
+<p>content: <%= @blog.content %></p>
+
+<p>
+  <%= link_to '投稿されたブログはこちら', blogs_path(@blog) %>
+</p>
+<!-- NoticeMailer#sendmail_blog
 
 <%= @greeting %>, find me in app/views/notice_mailer/sendmail_blog.text.erb
+ -->
