--- a/app/views/notice_mailer0/sendmail_contact.text.erb
+++ b/app/views/notice_mailer0/sendmail_contact.text.erb
@@ -1,9 +1,5 @@
-<h1>お問い合わせが完了しました</h1>
+*お問い合わせが完了しました*
 
-<h4>title: <%= @contact.name %></h4>
-<p>email: <%= @contact.email %></p>
-<p>content: <%= @contact.content %></p>
-<!-- NoticeMailer0#sendmail_contact
-
-<%= @greeting %>, find me in app/views/notice_mailer0/sendmail_contact.text.erb
- -->
+ユーザー: <%= @contact.name %>
+メールアドレス: <%= @contact.email %>
+内容: <%= @contact.content %>
