--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -4,17 +4,7 @@
 <p><%= notice %></p>
 
 <%= form_for(@contact, url: confirm_contacts_path) do |f| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @contact.errors.count %>件のエラーがあります。</h2>
-
-      <ul>
-      <% @contact.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= f.error_messages! %>
   
 
   <%= f.label :name %>
