--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,14 +3,23 @@
     <p><%= notice %></p>
     <h1>ブログ一覧</h1>
       <%= link_to "Tweetする", new_blog_path, class: 'btn btn-default' %>
+    
+
     <% @blogs.each do |blog| %>
     <div class="row">
+     <div class="blogimage">
+        <div class="field">
+          <%= image_tag(blog.user.avatar) %>
+        </div>
+    </div>
+    <div class="blogtitle">
       <h4><strong><%= blog.title %></strong></h4>
       <p><%= blog.content %></p>
       <p>#ユーザーID : <%= blog.user_id %></p>
       <p>#YOU: <%= blog.user.name %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
       <%= link_to "削除", blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
+    </div>
     </div>
     <% end %>
   </div>
