--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+  <div class="wrapper col-md-8 col-md-offset-2 col-sm-10 text-center">
     <p><%= notice %></p>
     <h1>ブログ一覧</h1>
       <%= link_to "Tweetする", new_blog_path, class: 'btn btn-default' %>
@@ -9,7 +9,11 @@
     <div class="row">
      <div class="blogimage">
         <div class="field">
+          <% if blog.user.avatar? %>
           <%= image_tag(blog.user.avatar) %>
+          <% else %>
+          <%= image_tag(blog.user.image_url) %>
+          <% end %>
         </div>
     </div>
     <div class="blogtitle">
