--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -24,7 +24,9 @@
       <p>#ユーザーID : <%= blog.user_id %></p>
       <p>#YOU: <%= blog.user.name %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
-      <%= link_to "削除", blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
+        <% if current_user.id == blog.user.id %>
+          <%= link_to "削除", blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
+        <% end %>
     </div>
     </div>
     <% end %>
