--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
             <li><%= link_to "ブログ", blogs_path %></li>
           </ul>
         </li>
+        <!-- dive16記述 -->
+        <li><%= link_to 'ユーザー一覧', users_path if user_signed_in? %></li>
+
         <% if user_signed_in? %>
         <li><%= link_to 'マイページ', edit_user_registration_path %></li>
 <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
