Taskアプリ機能の追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,12 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "ブログ", blogs_path %></li>
+            <li><%= link_to 'ユーザー一覧', users_path if user_signed_in? %></li>
+            <li><%= link_to "マイタスク", user_tasks_path(current_user.id) if user_signed_in? %></li>
           </ul>
         </li>
         <!-- dive16記述 -->
-        <li><%= link_to 'ユーザー一覧', users_path if user_signed_in? %></li>
+        
 
         <% if user_signed_in? %>
         <li><%= link_to 'マイページ', edit_user_registration_path %></li>
